syntax = "proto3";

package tron;
option go_package = "github.com/chainpusher/chainpusher/tron";

message ContractParameter {
  bytes data = 1;
  bytes owner_address = 2;
  bytes contract_address = 3;
}